OpenLGTV BCM: install.sh work start of rootfs and lginit backup on /home, /scripts/readspeedtest.sh from mmm4m5m's code
git-svn-id: http://svn.openlgtv.org.ru@507 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -227,4 +227,5 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: experimental support for SmartTV models
     * ADD: build and installation scripts can now handle 2011 BCM model images
     * ADD: support for KR 2010 BCM models
+    * ADD: /scripts/readspeedtest.sh script from mmm4m5m for read transfer rate measurement (thanks lprot for measurement hint)
     * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
