lgmod.sh - wait for Drive1
git-svn-id: http://svn.openlgtv.org.ru@521 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/changelog.txt
+++ b/lgmod_s7/changelog.txt
@@ -27,6 +27,7 @@ Install:
 	Run installation script:
 		# /mnt/usb1/Drive1/install.sh install
 		(or: 'install.sh install rootfs=filename.sqfs')
+		(ntfs fs: 'sh install.sh install')
 
 It is important, your firmware to have unlocked uboot!
 	http://openlgtv.org.ru/wiki/index.php/Bootloader_connection
