--- a/lgmod_s7/changelog.txt
+++ b/lgmod_s7/changelog.txt
@@ -1,4 +1,4 @@
-mmm4m5m & openlgtv community present LGMOD S7 v1.0.05 for LG TVs on Saturn 7 chipset. Tested on:
+mmm4m5m & openlgtv community present LGMOD S7 v1.0.07 for LG TVs on Saturn 7 chipset. Tested on:
 	32LD465-ZA, firmware v03.03.11 and v03.03.32
 	42LD420-ZA, firmware v03.03.26
 	42LD550-ZA, firmware v03.01.08
@@ -8,14 +8,11 @@ mmm4m5m & openlgtv community present LGMOD S7 v1.0.05 for LG TVs on Saturn 7 chi
 ====================================================================================
 
 WARNING: It is important, your firmware to have unlocked uboot! In case of troubles, you will need uboot!
-		http://openlgtv.org.ru/wiki/index.php/Bootloader_connection
+	http://openlgtv.org.ru/wiki/index.php/Bootloader_connection
 WARNING: Debug and uboot are disabled after firmware v3.03.2x
-WARNING: Flashing LG stock FW after LGMOD could brick your TV! Reason - not every LG FW will restore
-	the lginit partition. (LGMOD installation does erase lginit and write new rootfs.)
-	You can flash first FW 3.1.8 - this will restore lginit partition of your TV.
-WARNING: Check the number of your partitions (especially if the TV is not EU or non LCD!)
-		# cat /proc/mtd
-	LGMOD S7 was tested on TV with 25 partitions: mtd3=rootfs; mtd4=lginit; mtd11=user
+WARNING: Flashing LG stock FW after LGMOD - LG FW may restore rootfs but not lginit partition.
+	This could brick your TV! FW 3.1.8 will restore rootfs and lginit partitions.
+	(version 1.00.07 is trying to handle such cases)
 ====================================================================================
 
 Features:
