--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -232,6 +232,9 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: web proxy script for JavaScript code injection to improve Internet Browser (work in progress)
     * ADD: NVRAM commandline editor
     * ADD: get_RELEASE_info.sh script for getting LG firmware version
+    * ADD: NetCast links icons preloading at boot - much quicker links.html page load time
+    * ADD: mtdinfo.sh script for getting info about mtd partitions by mmm4m5m
+    * ADD: yavido service alternate player (prototype for now)
     * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
     * CHANGE: improved cramfs xip partitions check before mounting - to prevent kernel crash in case of corrupted lgapp partition (RELEASE)
     * CHANGE: partition mounting based on partition names instead of static mtd numbers - this should improve compatibility even with unknown models
