--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -242,3 +242,4 @@ Answer for people asking if they can use it if they have already made modificati
     * CHANGE: partition mounting based on partition names instead of static mtd numbers - this should improve compatibility even with unknown models
     * CHANGE: settings separated from rcS into /etc/rc.d/rc.settings
     * CHANGE: Internet Browser can be separated from WebUI (and proxied) with it's own NetCast icon in WebUI settings
+    * CHANGE: increase Bluetooth transfer storage from 10MB to 20MB
