--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -233,16 +233,15 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: /scripts/readspeedtest.sh script from mmm4m5m for read transfer rate measurement (thanks lprot for measurement hint)
     * ADD: storing rootfs and lginit backups at installation into /home/backup/{rootfs,lginit}.bck files
     * ADD: web proxy script for JavaScript code injection to improve Internet Browser - settings for start at boot (disabled by default)
-    * ADD: NVRAM commandline editor
     * ADD: get_RELEASE_info.sh script for getting LG firmware version
     * ADD: NetCast links icons preloading at boot - much quicker links.html page load time
     * ADD: mtdinfo.sh script for getting info about mtd partitions by mmm4m5m
     * ADD: yavido service alternate player (prototype for now)
     * ADD: rc.fwinfo to get info about TV model and LG firmware logged at boot
-    * ADD: nvram-edit tool to get info from NVRAM dump and change some locked values
+    * ADD: nvram-edit commandline tool to get info from NVRAM dump and change some locked values
     * ADD: libncurses.so.5.7 and recompiled top binary to use the lib
     * ADD: lua, luac, liblua.so.5.1.4
-    * ADD: libopenrelease.so
+    * ADD: OPENRELEASE 2.0.0 by rtokarev
     * UPDATE: tmux upgraded from 1.4 to 1.5 with use dynamic libncurses library instead of staticly linked code
     * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
     * CHANGE: improved cramfs xip partitions check before mounting - to prevent kernel crash in case of corrupted lgapp partition (RELEASE)
