--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -242,6 +242,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: libncurses.so.5.7 and recompiled top binary to use the lib
     * ADD: lua, luac, liblua.so.5.1.4
     * ADD: OPENRELEASE 2.0.0 by rtokarev
+    * ADD: CGI web page for remote control by mihaifireball under http://ip_of_tv/remote/
     * UPDATE: tmux upgraded from 1.4 to 1.5 with use dynamic libncurses library instead of staticly linked code
     * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
     * CHANGE: improved cramfs xip partitions check before mounting - to prevent kernel crash in case of corrupted lgapp partition (RELEASE)
