--- a/lgmod_s7/changelog.txt
+++ b/lgmod_s7/changelog.txt
@@ -40,10 +40,11 @@ Info for your TV is collected and saved into separate text file. Additional opti
 
 Changelog 1.0.10 :
 ==================
-* New webui pages: Services, Remote, RELEASE (INIT); Services: ssh/dropbear, syslogd
+* New webui pages: Logs, Services, Remote, RELEASE (INIT)
+* Services: ssh/dropbear, syslogd; Modules: nfs version 3 (better speed)
 * Auto mount netcast from /mnt/usb#/Drive#/LGMOD_S7/contents (and cache folder)
 - netcast from "7cast" archive works nice. It is not included in LGMOD zip
-* OPENRELEASE by rtokarev - key remap, "server" mode and more
+* OPENRELEASE by rtokarev adds "server" mode, remap remote control buttons and more...
 * Added tmux. RELEASE/TV is started inside. You can send keys and control TV remotely
 * Shell environment (/etc/profile; home is /lg/user/root - if directory exists)
 * Additional programs are packed as "extroot" archive. It is not included in LGMOD zip.
