--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -226,6 +226,7 @@ Answer for people asking if they can use it if they have already made modificati
     * FIX: /home was not writable on US and KR 2010 BCM models
     * FIX: netcast_config_regenerator.sh should use all country groups now for 'enable_all' option
     * FIX: support for Yahoo Widgets Engine running from other usb ports and other partitions
+    * FIX: new Internet Browser page by nicola_12345 + his JavaScript code in proxy fixes for frames switching and other button bindings
     * ADD: experimental support for SmartTV models
     * ADD: build and installation scripts can now handle 2011 BCM model images
     * ADD: support for KR 2010 BCM models
@@ -254,13 +255,13 @@ Answer for people asking if they can use it if they have already made modificati
     * CHANGE: support for OpenLGTV_BCM dir on any partition number on any of two USB ports in TV
     * CHANGE: installation is now being done via single installation file - OpenLGTV_BCM-vX.Y.Z.tar.sh
     * CHANGE: for safety reasons installation is now being done in chrooted virtual environment to ensure rootfs stability while flashing procedure
+    * CHANGE: use konfabulator-exec.sh even for US models to give ability to run custom ywe from USB storage device
 
 Remaining issues with 0.5.0 developement branch:
-    * builtin web proxy code is still not perfect - proxy works properly, but problems are with modified web pages code:
-	 - problems with switching between frames, not all pages are loading and netcast apps have problems with injected code
+    * problem with reboot - need to track it (web browser or konfabulator is started on unmounting)
     * autoupgrades from USB stick with new method are not tested, tar.sh file should be supported but no content verification before executing it
     * after manual install/upgrade rebooting is disabled for more testing installation procedure
-    * playing too much with settings could make problems with netcast configuration (?) - need to track that
+    * proxy performance is somekind worse than native and not all pages are loading yet with yellow ('Go to URL') button
     * logging is ugly and not consistent - scripts running in multiple threads log to the same file at the same time, many timestamps in logs
     * no support for very old firmware versions NetCast configuration (for example in Argentina) - still leaving those untouched (issue with all OpenLGTV BCM versions)
     * compatibility break with autoupgrade method from older versions - need to install via telnet/ssh/serial
